--- a/Lab1/css/styleme.css
+++ b/Lab1/css/styleme.css
@@ -25,7 +25,7 @@ h1,h4 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#validator {
+.validator {
     width: 60px;
     height: 30px;
 }
@@ -33,3 +33,9 @@ h1,h4 {
 span {
     color: yellow;
 }
+
+p.para:first-letter {
+    font-size: 20px;
+    font-weight: bold;
+}
+
