--- a/HW2/css/movie.css
+++ b/HW2/css/movie.css
@@ -37,16 +37,19 @@ h1 {
 
 .container .leftContainer {
     display: block;
-    width: 550px;
-    float: left;
+    width: 67%;
 }
 
 .container .rightContainer {
     display: block;
-    float:right;
+    width: 33%;
+    float: right;
 }
 
 .rotten-image {
     background-image: url("../images/rbg.png");
     background-repeat: repeat-x;
+    margin: 0px;
+    padding: 0px;
+   
 }
