--- a/HW2/css/movie.css
+++ b/HW2/css/movie.css
@@ -27,12 +27,13 @@ h1 {
 
 .container {
     width: 800px;
-    align-content: center;
     border: 4px solid gray;
-    border-radius: 20px;
+    border-radius: 20px;    
+    box-sizing: border-box; 
     margin-left: auto;
     margin-right: auto;
-    box-sizing: border-box;
+    overflow: hidden;
+
 }
 
 .container .leftContainer {
@@ -50,6 +51,34 @@ h1 {
     background-image: url("../images/rbg.png");
     background-repeat: repeat-x;
     margin: 0px;
-    padding: 0px;
-   
+    padding: 0px; 
+    box-sizing: border-box;
+    border-radius: 20px;  
+}
+
+.rating {
+    font-size: 48pt;
+    color: red;
+    font-weight: bold;
+}
+
+.leftContainer .left-column {  
+    display: block;  
+    width: 47%;
+    float: left;
+}
+
+.leftContainer .right-column {   
+    display: blo; 
+    width: 47%;
+    float: right;
+}
+
+.leftContainer .review {
+    font-size: 8pt;
+    font-weight: bold;
+    background-color: #E8DC9B;
+    border: 2px solid gray;
+    border-radius: 10px;
+    padding: 8px;
 }
