--- a/HW2/css/movie.css
+++ b/HW2/css/movie.css
@@ -21,15 +21,13 @@ h1 {
     font-size: 24pt;
     font-weight: bold;
     font-family: Tahoma, Verdana, sans-serif;
-    text-shadow: 3px 3px #999999;
-    
+    text-shadow: 3px 3px #999999;    
 }
 
 .container {
     width: 800px;
     border: 4px solid gray;
-    border-radius: 20px;    
-    box-sizing: border-box; 
+    border-radius: 20px; 
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
@@ -38,13 +36,38 @@ h1 {
 
 .container .leftContainer {
     display: block;
-    width: 67%;
+    width: 550px;
+    float: left;
+    
+}
+
+.container .pageFooter {
+    display: block;
+    margin: auto;
 }
 
 .container .rightContainer {
     display: block;
-    width: 33%;
+    width: 250px;
     float: right;
+    background-color: #A2B964;
+    
+}
+
+.rightContainer dl{
+    padding: 10pt;
+    font-size: 8pt;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.3em;
+}
+
+.rightContainer dl dt{
+    font-weight: bold;    
+}
+
+.rightContainer dl dd{
+    padding-bottom: 10pt;
+    
 }
 
 .rotten-image {
@@ -52,7 +75,6 @@ h1 {
     background-repeat: repeat-x;
     margin: 0px;
     padding: 0px; 
-    box-sizing: border-box;
     border-radius: 20px;  
 }
 
@@ -60,18 +82,12 @@ h1 {
     font-size: 48pt;
     color: red;
     font-weight: bold;
+    
 }
 
-.leftContainer .left-column {  
-    display: block;  
-    width: 47%;
-    float: left;
-}
-
-.leftContainer .right-column {   
-    display: blo; 
-    width: 47%;
-    float: right;
+.leftContainer .column { 
+    columns: 2;
+    margin: 2%;
 }
 
 .leftContainer .review {
@@ -80,5 +96,9 @@ h1 {
     background-color: #E8DC9B;
     border: 2px solid gray;
     border-radius: 10px;
-    padding: 8px;
+    padding: 8px;    
+}
+
+.leftContainer img {
+    margin-right: 5px;
 }
