--- a/HW2/css/movie.css
+++ b/HW2/css/movie.css
@@ -12,8 +12,8 @@ body {
 }
 
 .banner img {
-    display:block;
-    margin:auto;
+    display: block;
+    margin: auto;
 }
 
 h1 {
@@ -21,73 +21,83 @@ h1 {
     font-size: 24pt;
     font-weight: bold;
     font-family: Tahoma, Verdana, sans-serif;
-    text-shadow: 3px 3px #999999;    
+    text-shadow: 3px 3px #999999;
 }
 
 .container {
     width: 800px;
     border: 4px solid gray;
-    border-radius: 20px; 
+    border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
-
 }
 
 .container .leftContainer {
     display: block;
     width: 550px;
     float: left;
-    
 }
 
 .container .pageFooter {
-    display: block;
-    margin: auto;
+    clear: both;
+    text-align: center;
+    background-color: #A2B964;
+    padding: 5px;
+    margin-bottom: 0px;
 }
 
 .container .rightContainer {
     display: block;
     width: 250px;
     float: right;
-    background-color: #A2B964;
-    
+    background-color: #A2B964;    
 }
 
-.rightContainer dl{
+.overview{
+    margin-bottom: -40px;
+}
+
+.rightContainer dl {
     padding: 10pt;
     font-size: 8pt;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.3em;
 }
 
-.rightContainer dl dt{
-    font-weight: bold;    
+.rightContainer dl dt {
+    font-weight: bold;
 }
 
-.rightContainer dl dd{
+.rightContainer dl dd {
     padding-bottom: 10pt;
-    
 }
 
 .rotten-image {
     background-image: url("../images/rbg.png");
     background-repeat: repeat-x;
     margin: 0px;
-    padding: 0px; 
-    border-radius: 20px;  
+    padding: 0px;
+    border-radius: 20px;
+    height: 83px;
 }
 
 .rating {
     font-size: 48pt;
     color: red;
     font-weight: bold;
-    
+    display: inline-block;
+    overflow: hidden;
 }
 
-.leftContainer .column { 
-    columns: 2;
-    margin: 2%;
+.leftContainer .column {
+    width: 47%;
+    float: left;
+    padding-left: 2%;
+}
+
+.reviews {
+    margin-bottom: 20pt;
 }
 
 .leftContainer .review {
@@ -96,9 +106,18 @@ h1 {
     background-color: #E8DC9B;
     border: 2px solid gray;
     border-radius: 10px;
-    padding: 8px;    
+    padding: 8px;
+    overflow: hidden;
 }
 
 .leftContainer img {
+    float: left;
     margin-right: 5px;
+}
+
+.validators {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    opacity: 50%;
 }
